--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.1.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//Mockito
+	testImplementation 'org.mockito:mockito-core:4.0.0'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+
 }
 
 tasks.named('test') {
