--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'jacoco'
 }
 
 group = 'org.example'
@@ -21,6 +22,23 @@ configurations {
 
 repositories {
 	mavenCentral()
+}
+jacoco {
+	toolVersion = "0.8.10" // versión de JaCoCo
+}
+
+tasks.test {
+	useJUnitPlatform()
+	finalizedBy jacocoTestReport // Generar el reporte después de las pruebas
+}
+
+jacocoTestReport {
+	dependsOn test // Ejecuta las pruebas antes de generar el reporte
+	reports {
+		xml.required = true
+		csv.required = false
+		html.outputLocation = file("${buildDir}/jacocoHtml")
+	}
 }
 
 dependencies {
